--- a/sytles.css
+++ b/sytles.css
@@ -52,11 +52,11 @@
 	font-size: 0.9rem;
 	font-weight: bold;
 	color: var(--whtie);
+	padding-left: 0.4rem;
 }
 .modal__body--first-paragraph {
 	position: relative;
 	display: grid;
-	gap: 1rem;
 	padding-left: 1rem;
 }
 h1 {
@@ -67,77 +67,62 @@ h1 {
 	margin: 1rem;
 }
 .rating--row {
-	display: flex;
 	position: relative;
+	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding-right: 1rem;
-	padding-bottom: 2rem;
+	padding-bottom: 0.5rem;
+	grid-row: auto;
 }
 .rating--row-stars {
-	gap: 0.7rem;
+	/* gap: 0.7rem;
 	block-size: 1.5rem;
-	border: none;
+	border: none; */
+	display: flex;
+	grid-row: auto;
+	justify-content: space-between;
+	transform: scale(0.8);
+	gap: 0.4rem;
 }
+
 /*********************************************************************************************************/
-.star-rating {
+
+/* .rating {
+	position: relative;
 	display: inline-block;
 	font-size: 0;
-	position: relative;
+	cursor: pointer;
+	display: flex;
+	gap: 0.9rem;
+	margin: auto;
+	transform: scale(0.7);
+	right: 2rem;
+	max-width: inherit;
 }
 
-.star {
-	width: 20px;
-	height: 20px;
+.rating > input {
+	display: none;
+}
+
+.rating > label {
 	display: inline-block;
-	margin-right: 5px;
+	width: 25px;
+	height: 25px;
+	margin: 0;
+	padding: 0;
 	background-image: url("images/star-empty-darkBlue.svg");
-	background-size: contain;
+	background-size: cover;
 }
 
-.star:not(:last-child) {
-	margin-right: 5px;
-}
-
-.star-empty {
-	background-image: url("images/star-empty-darkBlue.svg");
-}
-
-.star-half {
-	background-image: url("images/star-half-darkBlue.svg");
-}
-
-.star-rating:hover .star {
-	background-image: url("images/star-empty-darkBlue.svg");
-}
-
-.star-rating:hover .star:hover,
-.star-rating:hover .star:hover ~ .star {
+.rating > input:checked ~ label {
 	background-image: url("images/star-full-darkBlue.svg");
-}
-
-.star-rating:hover .star:hover:nth-of-type(1),
-.star-rating:hover .star:hover:nth-of-type(2),
-.star-rating:hover .star:hover:nth-of-type(3),
-.star-rating:hover .star:hover:nth-of-type(4),
-.star-rating:hover .star:hover:nth-of-type(5) {
-	background-image: url("images/star-half-darkBlue.svg");
-}
+} */
 
 /*********************************************************************************************************/
-/* .image-container {
+.image-container {
 	position: relative;
 }
-.image-number {
-	position: absolute;
-	left: 0.55rem;
-	bottom: 0.25rem;
-	z-index: 1;
-} */
-
-/* .image-container:hover {
-	background-image: url(images/star-half-darkBlue.svg);
-} */
 hr.solid {
 	border-top: 1.3px solid var(--grey);
 	opacity: 0.3;
@@ -150,6 +135,7 @@ hr.solid {
 	width: 92%;
 	margin: auto;
 }
+/************************************second par********************************/
 .modal__body--second-paragraph {
 	position: relative;
 	display: grid;
@@ -162,6 +148,9 @@ hr.solid {
 	color: var(--white-grey);
 	padding-bottom: 4rem;
 }
+/************************************second par********************************/
+
+/************************************third par********************************/
 .modal__body--third-paragraph {
 	display: flex;
 	float: right;
@@ -170,6 +159,9 @@ hr.solid {
 	padding-right: 1rem;
 	margin: 0.5rem 0rem 0.5rem 0rem;
 }
+/************************************third par********************************/
+
+/************************************four par********************************/
 .modal__body--four-paragraph {
 	display: flex;
 	float: right;
@@ -207,12 +199,44 @@ hr.solid {
 	border: none !important;
 	border-radius: 50px;
 }
+/************************************four par********************************/
 @media (max-width: 600px) {
 	.modal {
 		border-radius: 0;
+		max-width: 60%;
+		min-width: 15rem;
 	}
 	.modal__header {
 		border-radius: 0px;
 		background-color: var(--deep-blue);
 	}
+	.modal__header--close-btn {
+		visibility: hidden;
+		position: relative;
+	}
+	.modal__header--close-btn::after {
+		visibility: visible;
+		position: absolute;
+		top: 0;
+		left: 0;
+		padding-left: 0.2rem;
+		content: "x";
+	}
+	.share-button {
+		top: 1rem;
+	}
+	.cancel-button {
+		visibility: hidden;
+	}
+}
+.centered {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.container {
+	position: relative;
+	text-align: center;
+	color: var(--deep-blue);
 }
