--- a/styles/modal.css
+++ b/styles/modal.css
@@ -69,6 +69,18 @@ h1 {
 	bottom: 0;
 	background-color: rgba(0, 0, 0, 0.5);
 }
+hr.solid {
+	border-top: 1.3px solid var(--grey);
+	opacity: 0.3;
+	border-radius: 5px;
+	width: 92%;
+	align-items: inherit;
+	justify-content: inherit;
+	bottom: 0;
+	margin: 1rem;
+	width: 92%;
+	margin: auto;
+}
 @media (max-width: 600px) {
 	.modal {
 		border-radius: 0;
